--- a/index.Rmd
+++ b/index.Rmd
@@ -8,8 +8,8 @@ documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
-github-repo: rstudio/bookdown-demo
-description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
+github-repo: floswald/ScPoEconometrics
+description: "We use this book to teach 2nd year Undergraduates at SciencesPo Econometrics from a purely practical perspective. No Maths."
 ---
 
 # What is this?
