Update the book

--- a/ScPoEconometrics.tex
+++ b/ScPoEconometrics.tex
@@ -333,6 +333,14 @@ We describe our methods in this chapter.
   \end{enumerate}
 \end{enumerate}
 
+\section{Try to find the Slope!}\label{try-to-find-the-slope}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{knitr}\OperatorTok{::}\KeywordTok{include_url}\NormalTok{(}\StringTok{"https://gallery.shinyapps.io/simple_regression/"}\NormalTok{,}\DataTypeTok{height =} \StringTok{"600px"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
 \chapter{Standard Errors}\label{std-errors}
 
 \begin{enumerate}
