--- a/03-SummaryStats.Rmd
+++ b/03-SummaryStats.Rmd
@@ -1,3 +1,159 @@
-# Summarizing Data {#summarize-data}
+# Working With Data  {#sum}
 
-We describe our methods in this chapter.
+In this chapter we will first learn some basic concepts that help summarizing data. Then, we will tackle a real-world task and read, clean, and summarize data from the web.
+
+## Summary Statistics
+
+`R` has built in functions for a large number of summary statistics. For numeric variables, we can summarize data with the center and spread. Make sure to have loaded the `ggplot2` library to be able to access the `mpg` dataset as introduced in section \@ref(dataframes).
+
+### Central Tendency {-}
+
+| Measure | `R`               | Result              |
+|---------|-------------------|---------------------|
+| Mean    | `mean(mpg$cty)`   | `r mean(mpg$cty)`   |
+| Median  | `median(mpg$cty)` | `r median(mpg$cty)` |
+
+### Spread {-}
+
+| Measure            | `R`              | Result             |
+|--------------------|------------------|--------------------|
+| Variance           | `var(mpg$cty)`   | `r var(mpg$cty)`   |
+| Standard Deviation | `sd(mpg$cty)`    | `r sd(mpg$cty)`    |
+| IQR                | `IQR(mpg$cty)`   | `r IQR(mpg$cty)`   |
+| Minimum            | `min(mpg$cty)`   | `r min(mpg$cty)`   |
+| Maximum            | `max(mpg$cty)`   | `r max(mpg$cty)`   |
+| Range              | `range(mpg$cty)` | `r range(mpg$cty)` |
+
+### Categorical {-}
+
+For categorical variables, counts and percentages can be used for summary.
+
+```{r}
+table(mpg$drv)
+table(mpg$drv) / nrow(mpg)
+```
+
+## Plotting
+
+Now that we have some data to work with, and we have learned about the data at the most basic level, our next tasks is to visualize the data. Often, a proper visualization can illuminate features of the data that can inform further analysis.
+
+We will look at four methods of visualizing data that we will use throughout the course:
+
+- Histograms
+- Barplots
+- Boxplots
+- Scatterplots
+
+### Histograms
+
+When visualizing a single numerical variable, a **histogram** will be our go-to tool, which can be created in `R` using the `hist()` function.
+
+```{r}
+hist(mpg$cty)
+```
+
+The histogram function has a number of parameters which can be changed to make our plot look much nicer. Use the `?` operator to read the documentation for the `hist()` to see a full list of these parameters.
+
+```{r}
+hist(mpg$cty,
+     xlab   = "Miles Per Gallon (City)",
+     main   = "Histogram of MPG (City)", # main title
+     breaks = 12,   # how many breaks?
+     col    = "red",
+     border = "blue")
+```
+
+Importantly, you should always be sure to label your axes and give the plot a title. The argument `breaks` is specific to `hist()`. Entering an integer will give a suggestion to `R` for how many bars to use for the histogram. By default `R` will attempt to intelligently guess a good number of `breaks`, but as we can see here, it is sometimes useful to modify this yourself.
+
+### Barplots
+
+Somewhat similar to a histogram, a barplot can provide a visual summary of a categorical variable, or a numeric variable with a finite number of values, like a ranking from 1 to 10.
+
+```{r}
+barplot(table(mpg$drv))
+```
+
+```{r}
+barplot(table(mpg$drv),
+        xlab   = "Drivetrain (f = FWD, r = RWD, 4 = 4WD)",
+        ylab   = "Frequency",
+        main   = "Drivetrains",
+        col    = "dodgerblue",
+        border = "darkorange")
+```
+
+### Boxplots
+
+To visualize the relationship between a numerical and categorical variable, we will use a **boxplot**. In the `mpg` dataset, the `drv` variable takes a small, finite number of values. A car can only be front wheel drive, 4 wheel drive, or rear wheel drive.
+
+```{r}
+unique(mpg$drv)
+```
+
+First note that we can use a single boxplot as an alternative to a histogram for visualizing a single numerical variable. To do so in `R`, we use the `boxplot()` function.
+
+```{r}
+boxplot(mpg$hwy)
+```
+
+However, more often we will use boxplots to compare a numerical variable for different values of a categorical variable.
+
+```{r}
+boxplot(hwy ~ drv, data = mpg)
+```
+
+Here used the `boxplot()` command to create side-by-side boxplots. However, since we are now dealing with two variables, the syntax has changed. The `R` syntax `hwy ~ drv, data = mpg` reads "Plot the `hwy` variable against the `drv` variable using the dataset `mpg`." We see the use of a `~` (which specifies a formula) and also a `data = ` argument. This will be a syntax that is common to many functions we will use in this course. 
+
+```{r}
+boxplot(hwy ~ drv, data = mpg,
+     xlab   = "Drivetrain (f = FWD, r = RWD, 4 = 4WD)",
+     ylab   = "Miles Per Gallon (Highway)",
+     main   = "MPG (Highway) vs Drivetrain",
+     pch    = 20,
+     cex    = 2,
+     col    = "darkorange",
+     border = "dodgerblue")
+```
+
+Again, `boxplot()` has a number of additional arguments which have the ability to make our plot more visually appealing.
+
+### Scatterplots
+
+Lastly, to visualize the relationship between two numeric variables we will use a **scatterplot**. This can be done with the `plot()` function and the `~` syntax we just used with a boxplot. (The function `plot()` can also be used more generally; see the documentation for details.)
+
+```{r}
+plot(hwy ~ displ, data = mpg)
+```
+
+```{r}
+plot(hwy ~ displ, data = mpg,
+     xlab = "Engine Displacement (in Liters)",
+     ylab = "Miles Per Gallon (Highway)",
+     main = "MPG (Highway) vs Engine Displacement",
+     pch  = 20,
+     cex  = 2,
+     col  = "dodgerblue")
+```
+
+### `ggplot` {#ggplot}
+
+All of the above plots could also have been generate using the `ggplot` function from the already loaded `ggplot2` package. Which function you use is up to you, but sometimes a plot is easier to build in base R (like in the `boxplot` example maybe), sometimes the other way around.
+
+```{r}
+ggplot(data=mpg,aes(x=displ,y=hwy)) + geom_point()
+```
+
+`ggplot` is impossible to describe in brief terms, so please look at [the package's website](http://ggplot2.tidyverse.org) which provides excellent guidance. We will from time to time use ggplot in this book, so try to familiarize yourself with it. Let's quickly demonstrate how one could customize that first plot:
+
+```{r}
+ggplot(data=mpg,aes(x=displ,y=hwy)) +   # ggplot() makes base plot
+  geom_point(color="blue",size=2) +     # how to show x and y?
+  scale_y_continuous(name="Miles Per Gallon (Highway)") +  # name of y axis
+  scale_x_continuous(name="Engine Displacement (in Liters)") + # x axis
+  theme_bw() +    # change the background
+  ggtitle("MPG (Highway) vs Engine Displacement")   # add a title
+```
+
+### `dplyr`
+
+The `dplyr` package is widely used tool to work with data in `R`. We will briefly look at it's functionality now.
