--- a/packages.bib
+++ b/packages.bib
@@ -6,12 +6,33 @@
   year = {2017},
   url = {https://www.R-project.org/},
 }
+@Manual{R-bindrcpp,
+  title = {bindrcpp: An 'Rcpp' Interface to Active Bindings},
+  author = {Kirill Müller},
+  year = {2017},
+  note = {R package version 0.2},
+  url = {https://CRAN.R-project.org/package=bindrcpp},
+}
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2018},
   note = {R package version 0.7},
   url = {https://CRAN.R-project.org/package=bookdown},
+}
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain Francois and Lionel Henry and Kirill Müller},
+  year = {2017},
+  note = {R package version 0.7.4},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+@Manual{R-ggplot2,
+  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author = {Hadley Wickham and Winston Chang},
+  year = {2016},
+  note = {R package version 2.2.1},
+  url = {https://CRAN.R-project.org/package=ggplot2},
 }
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
@@ -20,10 +41,24 @@
   note = {R package version 1.19},
   url = {https://CRAN.R-project.org/package=knitr},
 }
+@Manual{R-readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester and Romain Francois},
+  year = {2017},
+  note = {R package version 1.1.1},
+  url = {https://CRAN.R-project.org/package=readr},
+}
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang},
   year = {2017},
   note = {R package version 1.8},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+@Manual{R-tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2018},
+  note = {R package version 1.4.2},
+  url = {https://CRAN.R-project.org/package=tibble},
 }
